syntax = "proto3";

package auth;

service AuthService {
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
}

message AuthenticateUserRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  string status = 1;
}